@@ -38,7 +38,7 @@ var_dump(stream_get_meta_data($client));
 ?>
 --EXPECTF--
 Write some data:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -53,11 +53,13 @@ array(7) {
   int(0)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31331"
 }
 
 
 Read a line from the client, causing data to be buffered:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -72,11 +74,13 @@ array(7) {
   int(15)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31331"
 }
 
 
 Read 3 bytes of data from the client:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -91,11 +95,13 @@ array(7) {
   int(12)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31331"
 }
 
 
 Close the server side socket and read the remaining data from the client:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -110,4 +116,6 @@ array(7) {
   int(0)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31331"
 }
