@@ -36,7 +36,7 @@ fclose($client);
 ?>
 --EXPECTF--
 Write some data:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -51,11 +51,13 @@ array(7) {
   int(%i)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31334"
 }
 
 
 Read a line from the client:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -70,11 +72,13 @@ array(7) {
   int(%i)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31334"
 }
 
 
 Close the server side socket and read the remaining data from the client:
-array(7) {
+array(8) {
   ["timed_out"]=>
   bool(false)
   ["blocked"]=>
@@ -89,4 +93,6 @@ array(7) {
   int(%i)
   ["seekable"]=>
   bool(false)
+  ["uri"]=>
+  string(21) "tcp://127.0.0.1:31334"
 }
